# hybrid-godas

./: .gitignore  .gitmodules  .readthedocs.yml  CMakeLists.txt  Makefile  README.md  build-mom.sh  build.sh  compile.sh  configure.sh
config/: README.md  config.exp  env.gaea  gaea  gaea.env  gaea_c3.env  gcc  gcc.env
config/da/: datatable.3dvar  letkf.yaml  namelist.3dvar  obsprep.nml  rst_update.nml
config/machine/: gcc  nasa.discover.gcc
docs/: conf.py  index.rst  installation.rst  setup.rst  support.rst
env/: README.md  env.gfortran
fix/: analysis_vgrid_lev35.v1.nc  geothermal_davies2013_v1.nc  grid_spec.nc  mask_table.1053.90x45  mask_table.108.36x18  mask_table.33.16x18  mask_table.3785.90x144  mask_table.548.32x72  salt_restore_PHC2.1440x1080.v20180405.nc  seawifs-clim-1997-2010.1440x1080.v20180328.nc  slp.clim.nc  topog.nc  woa13_decav_ptemp_monthly_fulldepth_01.nc
jobs/: JJOB_DA_3DVAR  JJOB_DA_LETKF  JJOB_DA_PREP  JJOB_FCST_PREP  JJOB_FORECAST  JJOB_POST  JJOB_PREP_3DVAR  README.md  da.obsop.comb.sh  da.update.sh
pkg/: CMakeLists.txt  README.md
pkg/model/: CMakeLists.txt
pkg/model/MOM6-changes/MOM6/config_src/coupled_driver/: MOM_surface_forcing.F90  coupler_util.F90  ocean_model_MOM.F90
pkg/model/MOM6-changes/MOM6/config_src/static/: MOM_memory.h
pkg/model/MOM6-changes/SIS2/: SIS2_ice_thm.F90  SIS_continuity.F90  SIS_ctrl_types.F90  SIS_debugging.F90  SIS_diag_mediator.F90  SIS_dyn_bgrid.F90  SIS_dyn_cgrid.F90  SIS_dyn_trans.F90  SIS_fast_thermo.F90  SIS_fixed_initialization.F90  SIS_get_input.F90  SIS_hor_grid.F90  SIS_memory_macros.h  SIS_optics.F90  SIS_slow_thermo.F90  SIS_sum_output.F90  SIS_tracer_advect.F90  SIS_tracer_flow_control.F90  SIS_tracer_registry.F90  SIS_transcribe_grid.F90  SIS_transport.F90  SIS_types.F90  SIS_utils.F90  combined_ice_ocean_driver.F90  ice_age_tracer.F90  ice_boundary_types.F90  ice_grid.F90  ice_ridge.F90  ice_shortwave_dEdd.F90  ice_spec.F90  ice_thm.F90  ice_type.F90
pkg/model/MOM6-changes/coupler/: atm_land_ice_flux_exchange.F90  coupler_main.F90  flux_exchange.F90  ice_ocean_flux_exchange.F90  land_ice_flux_exchange.F90  surface_flux.F90
run/: README.md  init_DAcycle.sh  init_cycle.sh  init_freerun.sh  mkrocoto.py  prep_forcing.sh  run_cycle.sh  run_fcst.sh
run/INPUT/: All_edits.nc  Caribbean_edits.cdl  Caribbean_edits.nc  Faroe_GS_edits.cdl  Faroe_GS_edits.nc  Faroe_edits.cdl  Faroe_edits.nc  MOM_channels_global_025  OM4_vertical_grid.ipynb  Oman_RedSea.cdl  Oman_RedSea.nc  WOA05_pottemp_salt.nc  Wyville_Thompson_edits.cdl  Wyville_Thompson_edits.nc  analysis_vgrid_lev35.v1.cdl  analysis_vgrid_lev35.v1.nc  atmos_mosaic_tile1Xland_mosaic_tile1.nc  atmos_mosaic_tile1Xocean_mosaic_tile1.nc  grid_spec.nc  hycom1_75.cdl  hycom1_75.nc  hycom1_75_800m.cdl  hycom1_75_800m.nc  land_mask.nc  land_mosaic_tile1Xocean_mosaic_tile1.nc  layer_coord.nc  mask_table.1053.90x45  mask_table.1309.90x54  mask_table.1402.72x72  mask_table.1809.90x72  mask_table.2309.90x90  mask_table.242.32x36  mask_table.2428.90x95  mask_table.2570.90x100  mask_table.274.36x36  mask_table.315.32x45  mask_table.33.16x18  mask_table.3785.90x144  mask_table.548.32x72  mask_table.622.36x72  (+24 more)
run/config/: README.md  config.DAcycle  config.DAcycle.sh  config.freerun  config.freerun.sh  hybridgodas.template.config
run/config.exp_default/: README.md  hybridgodas.template.config
run/config_script/: input.nml
run/config_static/: MOM_override  data_table  diag_table
run/moab/: run_DAcycle.sh  run_freerun.sh
run/rocoto/: README.md  hybridgodas.rocoto  hybridgodas.run  hybridgodas.runstep  hybridgodas.status  hybridgodas.template.xml  jobwrapper.sh
run/subscripts/: README.md  all.common.sh  cycle.post.sh  cycle.scrub.sh  da.3dvar.prep.sh  da.3dvar.run.sh  da.letkf.prep.sh  da.letkf.run.sh  da.obsop.comb.sh  da.obsop.sh  da.obsop.slot.sh  da.post.sh  da.postproc.sh  da.prep.sh  da.run.sh  da.update.sh  fcst.bias_corr.sh  fcst.comb.rst.sh  fcst.comb.slot.sh  fcst.combine.sh  fcst.post.sh  fcst.prep.sh  fcst.rst_update.sh  fcst.run.sh  jobwrapper.sh  run_da.sh  run_fcst.sh
scripts/: da.obsop.slot.sh  exglobal_fcst_nemsfv3gfs.sh  fcst.comb.slot.sh
src/: CMakeLists.txt  MOM6.coupler.patch  README.md
src/MOM6-changes/: README.md
src/bias/: .gitignore  CMakeLists.txt  datatable.F90  pressure_correction.F90
src/datetime/: Makefile
src/gsw/: CMakeLists.txt  Makefile
src/obsop/: .gitignore  CMakeLists.txt  Makefile  README.md  compute_profile_error.f90  cubic_spline.f90  kdtree.f90  linked_list.f90  obscom_grid.f90  obscom_obsio.f90  obsio_nc.f90  obsop.F90  obsop.f90  obsop_sst.f90  obsprep_adt.F90  obsprep_combine.F90  obsprep_insitu.F90  obsprep_insitu.f90  obsprep_insitu_legacy.f90  obsprep_nc2dat.f90  obsprep_sst.F90  obsprep_sst.f90  obsprep_sst_gds2.f90  obsprep_sst_pathfinder.f90  read_avhrr_pathfinder.f90  running_stats.F90
src/obsop/gsw/: CMakeLists.txt
src/util/: CMakeLists.txt  README.md  bgvar.F90  bgvar.f90  bgvar.f90.old  datatable.f90  hzsmooth.f90  rst_update.F90  update_restart.f90  vtloc.F90  vtloc.f90
tools/: README.md  calc_coast_dist.py  calc_mask_table.py  clim_noise.py  get_cfsr_fluxes.py  get_cfsr_fluxes.ucar  get_fluxes_20CRv2.py  get_fluxes_cfsr.py  get_ic_soda.py  get_soda_ic.py  get_sst_acspo.py  get_sst_pathfinder.py  mask_output.py  moab_get_cfsr.sh  omf_plot.py  omf_stats.py  prep_forcing.sh  rst_update.py  update_bkg.py  update_restart.py
tools/get_fluxes_cfsr.data/: remapgrid.nc  slp_corr.hires.nc  slp_corr.lowres.nc
tools/plots/: omf.py  omf_profile.py  omf_timeseries.py
tools/postproc/: .gitignore  compress.py  genGrid.py  genWeights.sh  mask.py  postproc_pentad.sh  remap.ncl  rotUV.py
ush/: SIS_override  datatable.3dvar  forecast_postdet.sh  forecast_predet.sh  parsing_model_configure_FV3.sh  parsing_namelists_FV3.sh  readme.txt
workflow/: README.md  _expdir_main_auto.yaml  _expdir_main_manual.yaml  _main.yaml  top.yaml  user.yaml  user.yaml.default
workflow/cases/: tutorial_case.yaml
workflow/config/: base.yaml  readme.md
workflow/default/: README.md  base.yaml  case.yaml  (+5 more)
(+147 files in other folders)
